# WELA

./: .gitignore  README.md  cli.py  common.py  config.yaml.cli.example  config.yaml.example  config.yaml.gui.example  config.yaml.wechat.example  gui.py  main.py  pyproject.toml  requirements.txt  upload_txt_to_retriver.py  wechat.py
agents/: __init__.py  agent.py  conversation.py  llm.py  meta.py  sequential.py
callback/: __init__.py  callback.py  event.py
gui/: alarm.py  chat_box.py  conversation_thread.py  initializer.py  input_dialog.py  speech_recognition_thread.py  wela_widget.py  whiteboard.py
gui/widget/: output_box.py  widget.py
memory/: __init__.py  buffer_memory.py  memory.py  qdrant_memory.py  window_buffer_memory.py  window_qdrant_memory.py
memory/openai_chat/: qdrant_memory.py  window_qdrant_memory.py
meta/: __init__.py  meta.py  prompt.py
models/: __init__.py  model.py  openai_chat.py
prompts/: messages_template.py  prompt_template.py
retriever/: qdrant_retriever.py  retriever.py
schema/: message.py  message_placeholder.py  role.py
schema/template/: openai_chat.py
src/indexer/: index.py  simple_document_indexer.py
src/wela_agent/: __init__.py  wela.py
src/wela_agent/agents/: __init__.py  user_proxy_agent_ex.py
src/wela_agent/config_loader/: __init__.py  config_loader.py
src/wela_agent/context/: __init__.py  wela_chat_completion_context.py
src/wela_agent/embedding/: __init__.py  embedding.py  openai_embedding.py
src/wela_cli/: cli.py
src/wela_gui/: config.py  main.py
toolkit/: __init__.py  alarm_clock.py  browser.py  definition.py  duckduckgo.py  google_search.py  plan_and_execue.py  quit.py  research.py  screen_shot.py  term.py  toolkit.py  weather.py  web_browser.py  write_file.py
toolkit/agent/: plan.py
toolkit/browsing/: browsing.py  duckduckgo.py  web_browser.py
toolkit/term/: term.py
widget/: __init__.py  conversation_thread.py  speech_recognition_thread.py  widget.py
(+28 files in other folders)
