
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wela_agent"
version = "0.1.0"
authors = [
  { name="Lewis Wu", email="lewiswu1209@163.com" }
]
maintainers = [
  { name="Lewis Wu", email="lewiswu1209@163.com" }
]
description = "It's wela itself."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"

dependencies = [
  "autogen-agentchat",
  "autogen-ext[openai]",
  "PyGetWindow"
]

[project.urls]
Homepage = "https://github.com/lewiswu1209/WELA.git"
Repository = "https://github.com/lewiswu1209/WELA.git"

[project.optional-dependencies]
cli = [
  "windows-curses",
  "autogen-ext[mcp]"
]
gui = [
  "PyQt5",
  "qasync",
  "autogen-ext[mcp]"
]
dev = [
  "setuptools",
  "twine",
  "build"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["wela_agent"]
